# IndieCourier

./: README.md  app.py  auth.py  config.py  pyproject.toml  schemas.py  syndicate-to.json  utils.py
static/: modest.css
templates/: base.html
tests/: conftest.py  test_app_media.py  test_app_micropub.py  test_app_micropub_action.py  test_app_query.py  test_article.html  test_auth.py  test_note.html  test_query.py  test_utils.py
