[project]
name = "indiecourier"
version = "0.1.0"
description = "A Micropub endpoint implemented in FastAPI."
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "mf2py>=2.0.1",
    "pydantic-settings>=2.12.0",
    "pygithub>=2.8.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.34.0",
]
